mydb.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  creationTimestamp: null

  labels:

    app: mydb

  name: mydb

spec:

  replicas: 1

  selector:

    matchLabels:

      app: mydb

  strategy: {}

  template:

    metadata:

      creationTimestamp: null

      labels:

        app: mydb

    spec:

      containers:

      - image: docker.io/mysql:5.6

        name: mysql
