wp.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  creationTimestamp: null

  labels:

    app: wp

  name: wp

spec:

  replicas: 1

  selector:

    matchLabels:

      app: wp

  strategy: {}

  template:

    metadata:

      creationTimestamp: null

      labels:

        app: wp

    spec:

      containers:

      - image: docker.io/wordpress

        name: wordpress
