np.yml
kind: NetworkPolicy

apiVersion: networking.k8s.io/v1

metadata:

  name: api-allow

spec:

  podSelector:

    matchLabels:

      app: mydb

  ingress:

  - from:

      - podSelector:

          matchLabels:

            app: wp
